--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ gitlabci-checker = "gitlabci_checker.cli:cli"
 [tool.poetry.dependencies]
 python = "^3.7"
 click = "^8.1.3"
+requests = "^2.28.1"
+configparser = "^5.3.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
@@ -31,6 +33,7 @@ tox = "^3.27.0"
 tox-pyenv = "^1.1.0"
 types-setuptools = "^65.6.0.2"
 toml = "^0.10.2"
+types-requests = "^2.28.11.7"
 
 [tool.black]
 max-line-length = 100
