--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,15 +9,15 @@ repos:
     hooks:
       - id: black
 
-  # - repo: https://github.com/pycqa/pydocstyle
-  #   rev: 6.1.1
-  #   hooks:
-  #     - id: pydocstyle
-  #       files: ^isops
-  #       additional_dependencies:
-  #         - toml
-  #       args:
-  #         - --add-ignore=D100,D104
+  - repo: https://github.com/pycqa/pydocstyle
+    rev: 6.1.1
+    hooks:
+      - id: pydocstyle
+        files: ^isops
+        additional_dependencies:
+          - toml
+        args:
+          - --add-ignore=D100,D104
 
   - repo: https://github.com/pycqa/flake8
     rev: 5.0.4
