--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,4 +3,4 @@
   description: Check if your gitlab-ci pipeline compiles correctly.
   entry: cicheck
   language: python
-  files: .gitlab-ci.yaml
+  files: ^.*\.gitlab-ci.(yml|yaml)$
