Fixed parallel testing, updated deps

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = py311, py310, py39, py38, py37
+envlist = py312, py311, py310, py39
 isolated_build = True
 
 [testenv]
 deps = pytest
 commands =
-    pytest -v
+    pytest -vvv
